--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Sesion 6 Node y SPA</h1>
 
-    <script src="index.html" type="module"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
